discussion/kv_engine/165100/165100_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-49348: Correct logical clock race in setting CAS

Currently two threads using the logical clock CAS mode can race and
use the same CAS value. This means that two different documents (as
we currently only call this while holding a HashBucketLock) for the
same vBucket can have the same CAS value.

Change-Id: Iea6a1b1e03eec55f6fa3b02ff0a694e7ea882ff6

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-11-04 19:41:08.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-04 19:59:23.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13816/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10: error: "folly/portability/Gtest.h" file not found [clang-diagnostic-error]
#include <folly/portability/Gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13816/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
error: "folly/portability/Gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13816/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3450/ : FAILURE

Compile error at [2021-11-04T19:43:57.896Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3450/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15431/ : FAILURE

Compile error at [2021-11-04T19:44:11.979Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15431/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16399/ : FAILURE

Compile error at [2021-11-04T19:42:33.235Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16399/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15714/ : FAILURE

Compile error at [2021-11-04T19:46:17.366Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15714/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23769/ : FAILURE

Compile error at [2021-11-04T19:46:02.699Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: "folly/portability/Gtest.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23769/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3522/ : FAILURE

Compile error at [2021-11-04T19:50:47.180Z] ../kv_engine/engines/ep/tests/module_tests/hlc_test.cc:16:10:
fatal error: folly/portability/Gtest.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3522/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35298/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41571/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12617/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14593/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
